Added  new elements to page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Stowarzyszenie wielbicieli pingwinów</title>
+    <link rel="icon" href="D:\paula\it\vsc\strona_o_pingwinach\icon.png">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css" type="text/css">
+    <meta name="opis" content="Nasze stowarzyszenie zrzesza wielbicieli pingwinów. Członkowie w każdym wieku są mile widziani.">
+    <meta name="Autor" content="Paulina Kuta">
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <h2>Hello worlds!</h2>
+    <h1><b>Stowarzyszenie wielbicieli pingwinów</b></h1>
+    <hr>
+    <h2>Witamy na stronie naszego stowarzyszenia! <img src="D:\paula\it\vsc\strona_o_pingwinach\icon.png" alt="Pingwinek" height="30" width="30"></h2>
+    <img src="D:\paula\it\vsc\strona_o_pingwinach\pingwin-cesarski.jpg" alt="Pingwin cesarski" width="210" height="310" frameBorder="15">
+    <iframe src="https://giphy.com/embed/jxETRYAi2KReel7pqy" width="480" height="310" frameBorder="15" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/jxETRYAi2KReel7pqy">via GIPHY</a></p>
 </body>
 </html>
