--- a/index.html
+++ b/index.html
@@ -4,18 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stowarzyszenie wielbicieli pingwinów</title>
+    <title>Penguin lovers association</title>
     <link rel="icon" href="D:\paula\it\vsc\strona_o_pingwinach\icon.png">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css" type="text/css">
-    <meta name="opis" content="Nasze stowarzyszenie zrzesza wielbicieli pingwinów. Członkowie w każdym wieku są mile widziani.">
+    <meta name="opis" content="Page of penguin lovers association. ">
     <meta name="Autor" content="Paulina Kuta">
 </head>
 <body>
-    <h1><b>Stowarzyszenie wielbicieli pingwinów</b></h1>
-    <hr>
-    <h2>Witamy na stronie naszego stowarzyszenia! <img src="D:\paula\it\vsc\strona_o_pingwinach\icon.png" alt="Pingwinek" height="30" width="30"></h2>
-    <img src="D:\paula\it\vsc\strona_o_pingwinach\pingwin-cesarski.jpg" alt="Pingwin cesarski" width="210" height="310" frameBorder="15">
-    <iframe src="https://giphy.com/embed/jxETRYAi2KReel7pqy" width="480" height="310" frameBorder="15" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/jxETRYAi2KReel7pqy">via GIPHY</a></p>
+    <div class="content">
+    <h1><b>Penguin lovers association</b></h1>
+        <hr>
+    <h2>Welcome to our page! <img src="D:\paula\it\vsc\strona_o_pingwinach\icon.png" alt="Small penguin" height="30" width="30"></h2>
+        <p>Are you a fan of penguins? If your answer is yes than you've come to the right place! This is a safe space for everyone who loves those amazing animals.</p>
+        <img src="D:\paula\it\vsc\strona_o_pingwinach\pingwin-cesarski.jpg" alt="Emperor penguin" width="210" height="310" frameBorder="15">
+        <iframe src="https://giphy.com/embed/jxETRYAi2KReel7pqy" width="480" height="310" frameBorder="15" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/jxETRYAi2KReel7pqy">via GIPHY</a></p>
+        <hr>
+    <h3>What can you find here?</h3>
+        <p>This page allows you to:</p>
+        <ul>
+        <li>Learn more about your favourite birds!</br>
+        <li>Find beautiful, high quality photographs of different kinds of penguins.</li>
+        <li>Take a look at GIFs and memes if you came here for a laugh 😄.</li>
+        <li>Tell us what else would you like to see on our page *feedback*</li>
+        </li>
+        </ul>
+    <h4>Feedback</h4>
+    <form action="URL to form script" method="POST">
+        Your name:<br><input type="text" name="realname"><br>
+        Your email:<br><input type="text" name="email"><br>
+        Your comments:<br><textarea name="comments" rows="15" cols="50"></textarea>
+    </form>
+    </div>
 </body>
 </html>
