Added picture and links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>Are you a fan of <a href="https://simple.wikipedia.org/wiki/Penguin">penguins</a>? If your answer is yes than you've come to the right place! This is a safe space for everyone who loves those amazing animals.</p>
         <figure><img src="img\pingwin-cesarski.jpg" alt="Emperor penguin" width="210" height="310" frameBorder="15" class="center" loading="lazy">
             <figcaption>
-                Emperor penguin. Photo source: <a href="https://pinterest.com">pinterest.com</a>
+                Emperor penguin. via <a href="https://pinterest.com">pinterest.com</a>
             </figcaption>
         </figure>
         </section>
@@ -48,13 +48,18 @@
         <li>Tell us what else would you like to see on our page <a href="#feedback">feedback</a></li>
         </li>
         </ul>
-        <iframe src="https://giphy.com/embed/jxETRYAi2KReel7pqy" width="480" height="310" class="center" class="giphy-embed" loading="lazy" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/jxETRYAi2KReel7pqy">via GIPHY</a></p>
-        
+        <figure>
+            <iframe src="https://giphy.com/embed/jxETRYAi2KReel7pqy" width="480" height="310" class="center" class="giphy-embed" loading="lazy" allowFullScreen></iframe>
+            <figcaption>
+                via <a href="https://giphy.com/gifs/jxETRYAi2KReel7pqy">GIPHY</a>
+            </figcaption>
+        </figure>
+
         </section>
         <figure>
-            <img src="img/humboldt-penguin-standing-on-stones.jpg" width="374" height="282" class="center"  >
+            <img src="img/humboldt-penguin-standing-on-stones.jpg" width="474" height="382" class="center" loading="lazy" title="Humboldt penguin" >
             <figcaption>
-                Humboldt penguin. Photo source: <a href="https://pl.freepik.com">freepik.com </a>Author: bearfotos 
+                Humboldt penguin. via <a href="https://pl.freepik.com">freepik.com </a>
                 
             </figcaption>
         </figure>
@@ -72,6 +77,13 @@
         <textarea name="comments" rows="15" cols="50"></textarea><br><br>
         <input type="submit" value="Submit">
         </form>
+
+        <figure>
+            <img src="img/joel-herzog-OWonUAgq33E-unsplash.jpg" width="518" height="345" class="center" loading="lazy" title="Penguin walking away">
+            <figcaption>
+                Bye bye! via <a href="https://unsplash.com/photos/OWonUAgq33E">unsplash.com</a>
+            </figcaption>
+        </figure>
 
         </section>
         <hr>
